--- a/src/scss/create_publications/create_publications.scss
+++ b/src/scss/create_publications/create_publications.scss
@@ -119,8 +119,8 @@
 
     textarea {
       @extend %textarea;
-      border-bottom-left-radius: 0px !important;
-      border-bottom-right-radius: 0px !important;
+      border-bottom-left-radius: 0 !important;
+      border-bottom-right-radius: 0 !important;
     }
 
     .post_description-decorator {
