--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -135,7 +135,7 @@
     color: $white;
     border-color: $a_focus3;
     background-color: $a_focus3;
-    border-radius: 34px;
+    //border-radius: 34px;
   }
 
   & svg {
@@ -164,7 +164,7 @@
     color: $white;
     border-color: $a_focus;
     background-color: $a_focus;
-    border-radius: 34px;
+    //border-radius: 34px;
   }
 }
 
@@ -223,7 +223,7 @@
     color: $white;
     border-color: #cdb1fd;
     background-color: #cdb1fd;
-    border-radius: 34px;
+   // border-radius: 34px;
   }
 }
 
@@ -248,7 +248,7 @@
 
   &:focus {
     text-decoration: none;
-    border-radius: 34px;
+    //border-radius: 34px;
     background-color: #686666;
     border-color: #686666;
   }
