--- a/src/scss/add_account/add_account.scss
+++ b/src/scss/add_account/add_account.scss
@@ -14,7 +14,15 @@
         .card-header {
           padding: .95rem 1.25rem;
           background-color: #EDEFFF;
-
+          &.collapsed .rules_desc::before {
+            content: "";
+            width: 20px;
+            height: 3px;
+            background-color: #6244c9;
+            -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+            position: absolute;
+          }
           h2 {
             font-size: 1.125rem;
             font-family: Rubik, sans-serif;
