--- a/src/scss/add_description/add_description.scss
+++ b/src/scss/add_description/add_description.scss
@@ -4,15 +4,16 @@
   .btn-inline-custom4 {
     font-size: 1rem;
   }
-
-  .l_add-desc-container {
-    width: 50%;
-    @media (max-width: 1199px) {
-      width: 600px;
-      margin: 0 auto;
+  .l_add-desc{
+     margin: 0 0 1.85rem;
+    .l_add-desc-container {
+      width: 50%;
+      @media (max-width: 1199px) {
+        width: 600px;
+        margin: 0 auto;
+      }
     }
   }
-
   .l_add-desc-title {
     font-size: 3rem;
     font-weight: 500;
