--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -230,6 +230,10 @@ button:focus {
   }
   .l_site-title{
     margin-top: 1.375rem;
+    font-size: 3rem;
+    @media (max-width: 1600px) {
+      font-size: 2.5rem;
+    }
   }
 
   .first_screen & {
