--- a/src/scss/faq/faq.scss
+++ b/src/scss/faq/faq.scss
@@ -66,11 +66,7 @@
   font-size: 3rem;
   font-weight: 500;
   font-family: Rubik, sans-serif;
-  @media (max-width: 1600px) {
-    font-size: 2.8rem;
-  }
   @media (max-width: 991px) {
-    margin: 1rem 0;
     font-size: 2.2rem;
   }
   @media (max-width: 576px) {
@@ -80,19 +76,21 @@
 
 .l_faq-masthead {
   position: relative;
-  height: calc(100vh - 155px - 87px);
-  margin-bottom: 40px;
+  height: calc(100vh - 212px - 4.075rem);
+  margin: 2.7rem 0 2.5rem;
   @media (max-width: 1680px) {
-    height: calc(100vh - 113px - 87px);
+    height: calc(100vh - 170px - 3.075rem);
   }
   @media (max-width: 1600px){
-    height: calc(100vh - 97px - 81px);
+    height: calc(100vh - 145px - 3.075rem );
+    margin: 1.7rem 0 1.3rem;
   }
   @media (max-width: 991px) {
-    height: 510px;
+    height: 450px;
+    margin: 1.37rem 0 1.3rem;
   }
   @media (max-width: 576px) {
-    height: 430px;
+    height: 415px;
   }
   .l_faq-masthead-illustration {
     bottom: 0;
@@ -105,24 +103,26 @@
     background-size: contain;
     @media (max-width: 991px) {
       bottom: 0;
-      right: 15%;
-      width: 509px;
+      right: 20%;
+      width: 428px;
       height: 390px;
       background-size: 100%;
+      background-position: bottom;
     }
     @media (max-width: 767px) {
-      right: 5%;
+      right: 11%;
     }
     @media (max-width: 576px) {
       width: 100%;
       height: 317px;
       bottom: -5%;
       right: 0;
+      background-position: center;
     }
   }
 
   .l_faq-masthead_content {
-    padding-top: calc(23vh);
+    padding-top: calc(17vh);
     max-width: 600px;
     font-family: Rubik, sans-serif;
     @media (max-width: 1199px) {
@@ -138,6 +138,9 @@
       font-weight: 400;
       font-size: 3.625rem;
       line-height: 1.1;
+      @media (max-width: 1600px) {
+        font-size: 3rem;
+      }
       @media (max-width: 1199px) {
         font-size: 2.625rem;
       }
@@ -172,7 +175,9 @@
   background-size: cover;
   font-family: Rubik, sans-serif;
   padding: 65px 0;
-
+  @media (max-width: 1600px) {
+    padding: 40px 0;
+  }
   .l_faq-feedback_container {
     max-width: 570px;
     @media (max-width: 576px) {
@@ -182,7 +187,7 @@
       h3 {
         color: #fff;
         font-size: 2.25rem;
-        @media (max-width: 1024px) {
+        @media (max-width: 1600px) {
           font-size: 2rem;
         }
         @media (max-width: 576px) {
@@ -192,6 +197,15 @@
     }
     .btn-inline-custom {
       font-size: 1.5rem;
+      margin-bottom: 1rem;
+      padding: 1rem 0;
+      border-radius: 0.65rem;
+      width: 100%;
+      @media (max-width: 1600px) {
+        width: 75%;
+        font-size: 1.2rem;
+        padding: 0.6rem 0;
+      }
     }
   }
 }
