--- a/src/scss/faq/faq.scss
+++ b/src/scss/faq/faq.scss
@@ -101,6 +101,11 @@
     position: absolute;
     background: url(../images/faq_illustration.svg) no-repeat center;
     background-size: contain;
+    @media (min-width: 2200px) {
+      right: -25vw;
+      width: 58vw;
+      background-position: right;
+    }
     @media (max-width: 991px) {
       bottom: 0;
       right: 20%;
@@ -125,6 +130,9 @@
     padding-top: calc(17vh);
     max-width: 600px;
     font-family: Rubik, sans-serif;
+    @media (min-width: 2200px) {
+      max-width: 790px;
+    }
     @media (max-width: 1199px) {
       max-width: 440px;
     }
@@ -138,6 +146,9 @@
       font-weight: 400;
       font-size: 3.625rem;
       line-height: 1.1;
+      @media (min-width: 2200px) {
+        font-size: 4.625rem;
+      }
       @media (max-width: 1600px) {
         font-size: 3rem;
       }
@@ -157,6 +168,10 @@
       color: #c3c1c1;
       font-size: 1.12rem;
       max-width: 400px;
+      @media (min-width: 2200px) {
+        max-width: 790px;
+        font-size: 1.8rem;
+      }
       @media (max-width: 991px) {
         margin: 0 auto !important;
         text-align: center;
