--- a/src/scss/treatment/treatment.scss
+++ b/src/scss/treatment/treatment.scss
@@ -1,7 +1,7 @@
 @import "../variables";
 
 
-.l_treatment-title {
+.l_site-title {
   font-size: 3rem;
   font-weight: 500;
   margin-bottom: 3rem;
@@ -9,13 +9,6 @@
   @media (max-width: 1600px) {
     font-size: 2.8rem;
     margin-bottom: 1.5rem;
-  }
-  @media (max-width: 800px) {
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  @media (max-width: 576px) {
-    font-size: 2.2rem;
   }
 }
 
@@ -54,6 +47,9 @@
             height: 6px;
             width: 100%;
             border-bottom: 6px solid #FF398B;
+            @media (max-width: 1024px) {
+              bottom: 0;
+            }
             @media (max-width: 576px) {
               left: 0;
               width: 100%;
