--- a/src/scss/faq/faq.scss
+++ b/src/scss/faq/faq.scss
@@ -85,7 +85,10 @@
     height: calc(100vh - 145px - 3.075rem );
     margin: 1.7rem 0 1.3rem;
   }
-  @media (max-width: 1024px) and (min-height: 1300px) {
+  @media only screen
+  and (min-width: 991px)
+  and (max-height: 1366px)
+  and (-webkit-min-device-pixel-ratio: 1.5) {
     height: calc(40vh);
   }
   @media (max-width: 991px) {
@@ -109,7 +112,10 @@
       width: 58vw;
       background-position: right;
     }
-    @media (max-width: 1024px) and (min-height: 1300px) {
+    @media only screen
+    and (min-width: 991px)
+    and (max-height: 1366px)
+    and (-webkit-min-device-pixel-ratio: 1.5) {
       background-position: bottom;
       right: -59px;
       z-index: -1;
@@ -145,7 +151,10 @@
     @media (max-width: 1199px) {
       max-width: 440px;
     }
-    @media (max-width: 1024px) and (min-height: 1300px) {
+    @media only screen
+    and (min-width: 991px)
+    and (max-height: 1366px)
+    and (-webkit-min-device-pixel-ratio: 1.5)  {
       padding-top: calc(9vh);
     }
     @media (max-width: 991px) {
