--- a/css/spa-app.css
+++ b/css/spa-app.css
@@ -10221,6 +10221,18 @@ input[type=checkbox].switch:checked:after {
   }
 }
 
+@media (min-width: 1600px) {
+  .mb-xxl-4 {
+    margin-top: 1.5rem !important;
+  }
+}
+
+@media (min-width: 1600px) {
+  .mb-xxl-3 {
+    margin-bottom: 1rem !important;
+  }
+}
+
 .w-45 {
   width: 45% !important;
 }
