--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -231,8 +231,15 @@ button:focus {
   .l_site-title{
     margin-top: 1.375rem;
     font-size: 3rem;
+    font-family: Rubik, sans-serif;
+    color: #1F2022;
+    text-align: center;
+    margin-bottom: 0.8rem;
     @media (max-width: 1600px) {
       font-size: 2.5rem;
+    }
+    @media (max-width: 576px) {
+       font-size: 2rem;
     }
   }
 
@@ -242,20 +249,7 @@ button:focus {
     height: calc(100% - 100px);
 
     .first_screen-container {
-      .first_screen-title {
-        font-size: 3rem;
-        font-family: Rubik, sans-serif;
-        color: #1F2022;
-        text-align: center;
-        margin-bottom: 0.8rem;
-        @media (max-width: 1500px) {
-          font-size: 2.5rem;
-        }
-        @media (max-width: 576px) {
-          font-size: 2rem;
-        }
-      }
-
+      padding: 4rem 0;
       .first_screen_sub-title {
         font-size: 1.875rem;
         font-family: Rubik, sans-serif;
@@ -263,7 +257,7 @@ button:focus {
         text-align: center;
         font-weight: 400;
         margin-bottom: 3.125rem;
-        @media (max-width: 1500px) {
+        @media (max-width: 1536px) {
           font-size: 1.5rem;
           margin-bottom: 2rem;
         }
@@ -274,10 +268,11 @@ button:focus {
 
       .btn {
         padding: 1.2rem 5.78rem;
-        font-size: 1.3rem !important;
-        border-radius: 0.65rem !important;
-        @media (max-width: 1500px) {
-          padding: 1rem 4rem;
+        font-size: 1.3rem;
+        border-radius: 0.65rem;
+        @media (max-width: 1536px) {
+          padding: 0.8rem 4rem !important;
+          font-size: 1rem;
         }
         @media (max-width: 576px) {
           padding: 0.71rem 3rem;
@@ -286,69 +281,51 @@ button:focus {
     }
   }
 
-  .subs_end-container {
-    margin-top: 9.375rem;
-    margin-bottom: 3rem;
-    @media (max-width: 1280px) {
-      margin-top: 7.375rem;
-    }
-    @media (max-width: 992px) {
-      margin-top: 5rem;
-    }
-    @media (max-width: 768px) {
-      margin-top: 7rem;
-    }
-    @media (max-width: 576px) {
-      margin-top: 1.375rem;
-    }
-    @media (min-width: 2200px) {
-      margin-top: 13.5rem;
-    }
+  .subscription_end & {
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
 
-    .subs_end-title {
-      font-size: 3rem;
-      font-family: Rubik, sans-serif;
-      color: #1F2022;
-      text-align: center;
-      margin-bottom: 0.8rem;
-      @media (max-width: 1500px) {
-        font-size: 2.5rem;
-      }
+    .subs_end-container {
+        padding: 4rem 0;
       @media (max-width: 576px) {
-        font-size: 2rem;
+        padding: 0;
       }
-    }
 
-    .subs_end_sub-title {
-      font-size: 1.875rem;
-      font-family: Rubik, sans-serif;
-      color: #1F2022;
-      font-weight: 400;
-      text-align: center;
-      margin-bottom: 3.125rem;
-      @media (max-width: 1500px) {
-        font-size: 1.5rem;
-        margin-bottom: 2rem;
+      .subs_end_sub-title {
+        font-size: 1.875rem;
+        font-family: Rubik, sans-serif;
+        color: #1F2022;
+        font-weight: 400;
+        text-align: center;
+        margin-bottom: 3.125rem;
+        @media (max-width: 1536px) {
+          font-size: 1.3rem;
+          margin-bottom: 2rem;
+        }
+        @media (max-width: 576px) {
+          font-size: 1.2rem;
+        }
       }
-      @media (max-width: 576px) {
-        font-size: 1.2rem;
-      }
-    }
 
-    .btn {
-      padding: 1.2rem 9rem;
-      font-size: 1.3rem !important;
-      border-radius: 0.65rem !important;
-      @media (max-width: 1500px) {
-        padding: 0.71rem 7rem;
-      }
-      @media (max-width: 576px) {
-        padding: 0.71rem 1rem;
-        margin: 0 auto 1rem !important;
-        width: 70%;
+      .btn {
+        padding: 1.2rem 9rem;
+        font-size: 1.3rem;
+        border-radius: 0.65rem;
+        @media (max-width: 1536px) {
+          padding: 0.71rem 7rem;
+          font-size: 1rem;
+        }
+        @media (max-width: 576px) {
+          padding: 0.71rem 1rem;
+          margin: 0 auto 1rem !important;
+          width: 70%;
+        }
       }
     }
   }
+
+
 
   .registration & {
     background-image: url(../images/element.png);
@@ -1260,6 +1237,10 @@ button:focus {
       min-height: 150px;
       border-radius: 9px 9px 0 0;
       background-size: contain;
+      @media (max-width: 1522px) {
+        padding: .5rem .5rem 0;
+        min-height: 110px;
+      }
       @media (max-width: 576px) {
         background: #FFF;
       }
@@ -1307,10 +1288,21 @@ button:focus {
     .modal-body {
       padding: 3rem 1.5rem 1rem;
       color: #C7C3C3;
-      @media (max-width: 576px) {
-        padding: 1rem;
+      @media (max-width: 1600px) {
+        padding: 1rem 1.5rem 1rem;
       }
-
+      @media (max-width: 1522px) {
+        padding: .5rem 1.5rem;
+      }
+      @media (max-width: 576px) {
+        padding: .5rem;
+      }
+      .tariff_custom-group{
+        margin: 1.5rem;
+        @media (max-width: 1522px) {
+          margin: 1rem;
+        }
+      }
       .price {
         letter-spacing: .061rem;
         display: inline-block;
@@ -1369,6 +1361,14 @@ button:focus {
         font-weight: 500;
         font-size: 1.5rem !important;
         word-spacing: .25rem;
+        padding: 0.7rem;
+        width: 100%;
+        @media (min-width: 1600px) {
+          padding: 1rem ;
+        }
+        @media (min-width: 768px) {
+          margin-bottom: 0.5rem;
+        }
       }
 
       .icon-credit-cvc, .icon-credit-cxp {
